# discord_bot

./: .gitignore
secret_santa_bot/: Dockerfile  README.md  database_setup.sql  pyproject.toml  requirements.txt  secret_santa.db  setup_database.py  test_db_connection.py
secret_santa_bot/.do/: app.yaml
secret_santa_bot/src/: bot.py  database.py  utils.py
secret_santa_bot/src/cogs/: secret_santa.py
